eks/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "whoami-deployment"
  namespace: whoami
spec:
 selector:
  matchLabels:
   app: whoami
 replicas: 2
 template:
  metadata:
   labels:
    app: whoami
  spec:
   containers:
     - name: whoami
       image: containous/whoami
       imagePullPolicy: Always
       ports:
        - containerPort: 80
