eks/test/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
 selector:
  matchLabels:
   app: whoami
 replicas: 2 # indica al controlador que ejecute 2 pods
 template:
  metadata:
   labels:
    app: whoami
  spec:
   containers:
     - name: whoami
       image: containous/whoami
       ports:
        - containerPort: 80
