eks/test/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "whoami-ingress"
  namespace: "whoami"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: whoami-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "service-whoami"
              servicePort: 80
