eks/test/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami
spec:
  rules:
  - http:
      paths:
      - path: /api/whoami
        backend:
          serviceName: whoami
          servicePort: 80
