eks/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "service-whoami"
  namespace: "whoami"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "whoami"
